Cleaned up code, added some more config iptions and changed tickmanager to use an executer for better time management